# My-Jogyo-exp-agent-bellman

./: .gitignore  AGENTS.md  README.md  install.sh  package.json  pyproject.toml
.opencode/agent/: gyoshu.md  jogyo-feedback.md  jogyo-insight.md  jogyo.md
.opencode/bridge/: gyoshu_bridge.py
.opencode/command/: gyoshu-abort.md  gyoshu-auto.md  gyoshu-continue.md  gyoshu-interactive.md  gyoshu-plan.md  gyoshu-repl.md  gyoshu-replay.md  gyoshu-report.md  gyoshu-run.md  gyoshu-unlock.md
.opencode/lib/: cell-identity.ts  filesystem-check.ts  marker-parser.ts
.opencode/plugin/: gyoshu-hooks.ts
.opencode/tool/: gyoshu-completion.ts  gyoshu-snapshot.ts  notebook-writer.ts  python-repl.ts  retrospective-store.ts  session-manager.ts
plans/feature/: ai-todolist-20260102-052612-adversarial-gyoshu-jogyo-verification.md
plans/gyoshu/: ai-todolist-vibesci-extension.md  ai-todolist-vibesci-mvp.md
plans/rebrand/: ai-todolist-vibesci-to-gyoshu-rebrand.md
src/: index.ts
src/agent/: gyoshu.md  jogyo.md
src/command/: gyoshu-auto.md
src/tool/: gyoshu-completion.ts  gyoshu-snapshot.ts  python-repl.ts  session-manager.ts
tests/: adversarial-flow.test.ts  atomic-write.test.ts  auto-capture.test.ts  cell-identity.test.ts  integration.test.ts  session-lock.test.ts  test_bridge.py
